2004-10-01 Vangelis Rokas <vrokas AT otenet.gr>

	* .version: bumped version number to 2.4.5
	* support/Util/SDCCerr.h: added warning W_POSSBUG2.
	* support/Util/SDCCerr.c (messages structure): added entry for
	W_POSSBUG2
	
	Large cumulative patch for pic16 port and libraries.
	* device/include/pic16/sdcc-lib.h,
	* device/include/pic16/stdarg.h,
	* device/include/asm/pic16/features.h,
	* device/include/lib/pic16/libsdcc/gptr/{*.c, Makefile}: NEW,
	* device/include/pic16/float.h: changes reentrant keyword with
	_FS_REENTRANT, added prototype for __fsneq, included sdcc-lib.h
	* device/lib/pic16/libsdcc/Makefile: added target directory gptr,
	updated target build-libraries to include objects from gptr,
	* device/lib/pic16/libsdcc/{char,int,long}/*.c: added macro
	_IL_REENTRANT to all function headings, included sdcc-lib.h header,
	* device/lib/pic16/libsdcc/float/*.c: added macro _FS_REENTRANT to
	all function headings,
	* src/SDCCmain.c: added global parameter userIncDirsSet,
	* (parseCmdLine): when option -I is encountered add directory to
	userIncDirsSet too,
	* src/version.awk: added space between control and long,
	* src/pic16/NOTES: added some notes for the port,
	* src/pic16/gen.c: added prototype for mov2fp function,
	* (fReturnpic16[]): properly named return value registers,
	* (_G structure): added fields stackRegSet, fregsUsed, stack_lat,
	* (aopForSym): added code to handle symbols with onStack flag set,
	symbols onStack are allocated PTRSIZE bytes,
	* (aopFreeAsmop): handles special case where asmops are stack objects,
	* (aopGet, pic16_popGet): adde cod to handle new asmop AOP_STA,
	* (pic16_popGetTempReg, pic16_popGetTempRegCond, pic16_popReleaseTempReg):
	added argument lock to trace flaws in allocating temporary registers
	when developing port,
	* (pic16_popGetLit, pic16_popGetLit2): changed lit from unsigned to signed
	* (pic16_popRegFromString): reenabled allocating a direct register
	from string,
	* (assignResultValue): various beautifications,